[gd_scene load_steps=13 format=3 uid="uid://bs2iqwoux1bo"]

[ext_resource type="PackedScene" uid="uid://djy2s300mxioo" path="res://Assets/models/bottle1.glb" id="1_gwywe"]
[ext_resource type="Script" uid="uid://im13vwluqfpe" path="res://Project/Items/bottle.gd" id="2_xnrmv"]
[ext_resource type="Material" uid="uid://ccpo5t520vg1d" path="res://Project/Helper/outline_mat.tres" id="3_18e7k"]
[ext_resource type="Script" uid="uid://khxvm27goj8a" path="res://Project/Environment/Interactable/billboard_label.gd" id="3_p6eba"]
[ext_resource type="Material" uid="uid://b1gs6anxli8d1" path="res://Project/Helper/telelporter_mat.tres" id="4_iiqhd"]
[ext_resource type="Material" uid="uid://c7f8mfo3xocv5" path="res://Assets/mats/wodka_water.tres" id="4_j86vy"]
[ext_resource type="PackedScene" uid="uid://dv0dmlek3l4uj" path="res://Assets/models/bottle_wodka.glb" id="7_ppu78"]
[ext_resource type="AudioStream" uid="uid://cxw3610yvnm5l" path="res://Assets/Sounds/snd_warp_out.wav" id="8_b1kw6"]
[ext_resource type="AudioStream" uid="uid://cd63k8jhnkgej" path="res://Assets/Sounds/snd_warp_in.wav" id="9_rujmt"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_18e7k"]
height = 0.4136963
radius = 0.13720703

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_80a0o"]
points = PackedVector3Array(-0.05, 0, -9.79006e-06, -0.0490407, 0, -0.0097592, -0.0490407, 0, 0.00974941, -0.05, 0.263997, -9.79006e-06, -0.046202, 0, -0.0191367, -0.0490407, 0.263997, -0.0097592, -0.046202, 0, 0.0191269, -0.0490407, 0.263997, 0.00974941, -0.0254601, 0.397669, -9.79006e-06, -0.0415818, 0, -0.02778, -0.046202, 0.263997, -0.0191367, -0.0249706, 0.397669, -0.00497259, -0.0415818, 0, 0.0277702, -0.046202, 0.263997, 0.0191269, -0.0249706, 0.397669, 0.0049628, -0.0353563, 0, -0.0353563, -0.0415818, 0.263997, -0.02778, -0.0235219, 0.397669, -0.00974941, -0.0353563, 0, 0.0353465, -0.0415818, 0.263997, 0.0277702, -0.0235219, 0.397669, 0.00972983, -0.02778, 0, -0.0415818, -0.0353563, 0.263997, -0.0353563, -0.0211629, 0.397669, -0.0141445, -0.0180012, 0.397669, -0.0180012, -0.02778, 0, 0.041572, -0.0353563, 0.263997, 0.0353465, -0.0180012, 0.397669, 0.0179914, -0.0211629, 0.397669, 0.0141347, -0.0191367, 0, -0.046202, -0.02778, 0.263997, -0.0415818, -0.0141445, 0.397669, -0.0211629, -0.0191367, 0, 0.0461922, -0.02778, 0.263997, 0.041572, -0.0141445, 0.397669, 0.0211531, -0.0097592, 0, -0.0490407, -0.0191367, 0.263997, -0.046202, -0.00974941, 0.397669, -0.0235219, -0.0097592, 0, 0.0490309, -0.0191367, 0.263997, 0.0461922, -0.00974941, 0.397669, 0.0235121, -9.79006e-06, 0, -0.05, -0.0097592, 0.263997, -0.0490407, -0.00497259, 0.397669, -0.0249706, -9.79006e-06, 0, 0.05, -0.0097592, 0.263997, 0.0490309, -0.00497259, 0.397669, 0.0249608, 0.00974941, 0, -0.0490407, -9.79006e-06, 0.263997, -0.05, -9.79006e-06, 0.397669, -0.0254601, 0.00974941, 0, 0.0490309, -9.79006e-06, 0.263997, 0.05, -9.79006e-06, 0.397669, 0.0254405, 0.0191269, 0, -0.046202, 0.00974941, 0.263997, -0.0490407, 0.0049628, 0.397669, -0.0249706, 0.0191269, 0, 0.0461922, 0.00974941, 0.263997, 0.0490309, 0.0049628, 0.397669, 0.0249608, 0.0277702, 0, -0.0415818, 0.0191269, 0.263997, -0.046202, 0.00972983, 0.397669, -0.0235219, 0.0277702, 0, 0.041572, 0.0191269, 0.263997, 0.0461922, 0.00972983, 0.397669, 0.0235121, 0.0353465, 0, -0.0353563, 0.0277702, 0.263997, -0.0415818, 0.0141347, 0.397669, -0.0211629, 0.0353465, 0, 0.0353465, 0.0277702, 0.263997, 0.041572, 0.0141347, 0.397669, 0.0211531, 0.041572, 0, -0.02778, 0.0353465, 0.263997, -0.0353563, 0.0179914, 0.397669, -0.0180012, 0.041572, 0, 0.0277702, 0.0353465, 0.263997, 0.0353465, 0.0179914, 0.397669, 0.0179914, 0.0461922, 0, -0.0191367, 0.041572, 0.263997, -0.02778, 0.0211531, 0.397669, -0.0141445, 0.0461922, 0, 0.0191269, 0.041572, 0.263997, 0.0277702, 0.0211531, 0.397669, 0.0141347, 0.0490309, 0, -0.0097592, 0.0461922, 0.263997, -0.0191367, 0.0235121, 0.397669, -0.00974941, 0.0490309, 0, 0.00974941, 0.0461922, 0.263997, 0.0191269, 0.0235121, 0.397669, 0.00972983, 0.05, 0, -9.79006e-06, 0.0490309, 0.263997, -0.0097592, 0.0249608, 0.397669, -0.00497259, 0.0490309, 0.263997, 0.00974941, 0.0249608, 0.397669, 0.0049628, 0.05, 0.263997, -9.79006e-06, 0.0254405, 0.397669, -9.79006e-06)

[sub_resource type="CylinderMesh" id="CylinderMesh_w05o1"]
material = ExtResource("4_j86vy")
top_radius = 0.045
bottom_radius = 0.045
height = 0.265

[node name="bottle_wodka" node_paths=PackedStringArray("mesh", "warp_out", "warp_in", "fill_indicator", "label_3d") groups=["Bottle", "Pickupable"] instance=ExtResource("1_gwywe")]
script = ExtResource("2_xnrmv")
mesh = NodePath("bottle_wodka/Cylinder")
warp_out = NodePath("Audio/warp_out")
warp_in = NodePath("Audio/warp_in")
fill_indicator = NodePath("bottle_wodka/Cylinder/fill_indicator")
label_3d = NodePath("Label3D")
outline_mat = ExtResource("3_18e7k")
teleport_mat = ExtResource("4_iiqhd")

[node name="Label3D" type="Label3D" parent="." index="0"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.426, 0.0724356)
pixel_size = 0.002
text = "STuff"
script = ExtResource("3_p6eba")
offset_y = 0.35
offset_dist = 0.06
use_parent_rotation_compensation = false
use_position_at_parent = false

[node name="Cylinder" parent="." index="1"]
visible = false
surface_material_override/0 = ExtResource("4_j86vy")

[node name="Area3D" type="Area3D" parent="." index="2"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00051379204, 0.20281982, 0)
shape = SubResource("CylinderShape3D_18e7k")

[node name="bottle_wodka" parent="." index="3" instance=ExtResource("7_ppu78")]

[node name="RigidBody3D" type="RigidBody3D" parent="bottle_wodka/Cylinder" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2919844, 0)

[node name="Col_Bottle" type="CollisionShape3D" parent="bottle_wodka/Cylinder/RigidBody3D" index="0"]
shape = SubResource("ConvexPolygonShape3D_80a0o")

[node name="fill_indicator" type="MeshInstance3D" parent="bottle_wodka/Cylinder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15443641, 0)
mesh = SubResource("CylinderMesh_w05o1")
skeleton = NodePath("../../../Cylinder")

[node name="Audio" type="Node3D" parent="." index="4"]

[node name="warp_out" type="AudioStreamPlayer3D" parent="Audio" index="0"]
stream = ExtResource("8_b1kw6")
volume_db = -20.0
unit_size = 5.0
max_db = 1.0
pitch_scale = 1.5

[node name="warp_in" type="AudioStreamPlayer3D" parent="Audio" index="1"]
stream = ExtResource("9_rujmt")
volume_db = -20.0
unit_size = 5.0
max_db = 1.0
pitch_scale = 1.5

[editable path="bottle_wodka"]
